correct z-index e navbar bonus

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -131,6 +131,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 1000;
 }
 /*** Top Header ***/
 .am-top-header, .am-bottom-header {
@@ -176,6 +177,20 @@ header {
 .navbar-expand-lg .navbar-nav .am-play-menu-bottom a {
     text-decoration: underline;
     border-radius: 5px;
+}
+.navbar-expand-lg .navbar-nav .am-main-menu-right {
+    align-items: center;
+    gap: 60px;
+}
+.am-icon-lens {
+    width: 25px;
+    margin-left: 20px;
+    font-size: 24px;
+}
+.am-play-menu-right-burger {
+    position: absolute;
+    top: 22px;
+    right: 85px;
 }
 
 /***********
@@ -315,6 +330,10 @@ footer a {
     .navbar-expand-lg .navbar-nav .dropdown-menu {
         position: fixed;
         top: 108px;
+    }
+    .am-play-menu-right {
+        position: initial;
+        align-items: center;
     }
 
     /* MAIN */
